# f1-race-engineering

./: .gitignore  README.md  pyproject.toml
data/cache/: cache_manager.py
data/providers/: base.py  fastf1_provider.py  openf1_provider.py
tests/: test_cache_manager.py
ui/: app.py  main.py  resources.py
ui/panels/: weekend_panel.py
ui/widgets/: telemetry_plot.py
ui/windows/: main_window.py
